[package]
name = "feos"
version = "0.0.1"
authors = ["danielle kefford"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies]
bootloader = "0.9.8"
rlibc = "1.0.0"
spin = "0.5.2"
volatile =  "0.2.6"
